Upgrade target SDK to 34

--- a/sunmiprinterutill/build.gradle
+++ b/sunmiprinterutill/build.gradle
@@ -1,12 +1,10 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 33
-
-
     defaultConfig {
+        compileSdk 34
         minSdkVersion 15
-        targetSdkVersion 33
+        targetSdkVersion 34
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
