--- a/sunmiprinterutill/src/main/AndroidManifest.xml
+++ b/sunmiprinterutill/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 
     <queries>
         <package android:name="woyou.aidlservice.jiuiv5" />
